# DBounty-hunter

./: .env.example  .gitignore  README.md  docker-compose.yml  structure.txt
backend/: .env.example  Cargo.toml
backend/migrations/: 0001_create_users.sql  0002_create_bounties.sql  0003_create_submissions.sql  0004_create_achievements.sql  0005_create_transactions.sql
backend/src/: config.rs  errors.rs  main.rs  state.rs  utils.rs
backend/src/db/: achievements.rs  bounties.rs  mod.rs  pool.rs  submissions.rs  transactions.rs  users.rs
backend/src/handlers/: achievements.rs  analytics.rs  auth.rs  bounties.rs  leaderboard.rs  mod.rs  notifications.rs  submissions.rs  transactions.rs  users.rs
backend/src/middleware/: auth_middleware.rs  current_user.rs  logging.rs  mod.rs
backend/src/models/: achievement.rs  bounty.rs  mod.rs  submission.rs  transaction.rs  user.rs
backend/src/routes/: achievements.rs  analytics.rs  auth.rs  bounties.rs  leaderboard.rs  mod.rs  notifications.rs  submissions.rs  transactions.rs  users.rs
backend/src/services/: auth_service.rs  blockchain_service.rs  bounty_service.rs  mod.rs  notification_service.rs  reputation_service.rs  submission_service.rs  transaction_service.rs
backend/src/soroban/: client.rs  escrow.rs  events.rs  mod.rs
contracts/: Cargo.toml
contracts/escrow/: Cargo.toml
docs/: API.md  ARCHITECTURE.md  SMART_CONTRACTS.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  main.jsx
infra/docker/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
(+118 files in other folders)
